--- a/style/style.css
+++ b/style/style.css
@@ -55,3 +55,19 @@ body{
 .hero-text-size{
     font-size: 2rem;
 }
+#blog-posts{
+    background-color: grey;
+    width: 70%;
+    margin: auto;
+}
+.blog-post{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    border: 1px solid black;
+    margin: 5px;
+    height: 150px;
+
+}
+.span-title{
+    color:pink;
+}
